--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,6 @@ main{
     a{
         text-decoration: none;
         display: inline-block;
-        font-weight: bold;
         padding: 0px 10px 0px 10px;
     }
     a.myButton:hover {
@@ -142,7 +141,6 @@ main{
         position:relative;
         top:1px;
     }
-
     .filtre i{
         background-color: #DEEBFF;
         color: #0065FC;
@@ -151,7 +149,6 @@ main{
         text-align: center;
         padding: 11px;
     }
-
     .infoicone{
         margin-top: 30px;
         margin-bottom: 50px;
@@ -164,35 +161,34 @@ main{
         display: inline-flex;
     }
 
-    form.card_container {
-        display: inline-flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: flex-start;
-        align-items: stretch;
-        align-content: stretch;
-        background-color: #F2F2F2;
-        border-radius: 25px;
-        width: 60%;
-
-        
-      }
-      article.card_bloc {
-        display: block;
-        flex-grow: 0;
-        flex-shrink: 1;
-        flex-basis: auto;
-        align-self: auto;
-        order: 0;
-        width: 200px;
-        height: 150px;
-        border: solid 3px white;
-        background-color: white;
-        border-radius: 25px;
-      }
-.image{
-    height: 100px;
+/*bloc*/
+h2{
+    font-size: 16px;
+    width: 100%;
 }
+    .flex_container {
+        display: flex;
+        flex-wrap: wrap;
+        height: auto;
+        width: 60%;
+        border-radius: 20px;
+        background-color: #1c87c9;
+        padding-top: 10px;
+        padding-bottom: 50px;
+        }
+        .article1 {
+        height: 100px;
+        width: 150px;
+        margin: 10px;
+        background-color: lightgrey;
+        border-radius: 20px;
+        }
+
+        .title
+        .price
+        .rating{
+            font-size: 12px;
+        }
 
   @media all and (max-width: 768px){
 
