--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 * {
-    margin: 0px;
+    margin: 0px 0px 0px 0px;
     padding: 0px;
     font-family: 'Raleway', sans-serif;
     /*outline: 1px solid red;*/
@@ -10,9 +10,9 @@ header{
   width: 100%;
   background-color: white;
 }
-img{
-  height: 30px;
-  width: 70px;
+img.logo1{
+  height: 50px;
+  width: 100px;
   margin: 25px 0px 25px 25px;
 }
 nav{
@@ -165,6 +165,7 @@ main{
 h2{
     font-size: 16px;
     width: 100%;
+    margin: 25px 0px 0px 60px;
 }
     .flex_container {
         display: flex;
@@ -172,22 +173,55 @@ h2{
         height: auto;
         width: 60%;
         border-radius: 20px;
-        background-color: #1c87c9;
+        background-color: #F2F2F2;
         padding-top: 10px;
         padding-bottom: 50px;
         }
         .article1 {
-        height: 100px;
-        width: 150px;
+        display: inline-flex;
+        flex-wrap: wrap;
+        height: 200px;
+        width: 220px;
         margin: 10px;
-        background-color: lightgrey;
+        background-color: white;
         border-radius: 20px;
         }
 
-        .title
-        .price
-        .rating{
+       .paragraphe{
             font-size: 12px;
+            padding: 0px 0px 0px 13px;
+            line-height: 20px;
+        }
+
+        .bloc_article {
+            display: flex;
+            flex-wrap: wrap;
+            height: 440px;
+            width: 720px;
+            padding: 5px 70px 20px 53px;
+        }
+
+        .img_article {
+            width: 214px;
+            height: 118px;
+            border-radius: 20px 20px 0px 0px;
+            border: solid 3px white;
+        }
+        a.texte {
+            text-decoration: none;
+            display: inline-block;
+            padding: 0px;
+        }
+        a.plus{
+            text-decoration: none;
+            display: inline-block;
+            padding: 0px 10px 0px 65px;
+        }
+        h3{
+            color: #000000;
+        }
+        p.price{
+            color: #000000;
         }
 
   @media all and (max-width: 768px){
@@ -241,4 +275,8 @@ h2{
         margin-bottom: 10px;
         font-size: 20px;
         }
+}
+
+footer {
+    background-color:#F2F2F2;
 }
