--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,9 @@ h1{
     width: auto;
     padding-left: 10px;
 }
+.search{
+display: none;
+}
 .search_wrap
 .btn{
 	height: 100%;
@@ -426,12 +429,7 @@ h2{
         flex-direction: column;
         align-items: center;
         font-size: 16px;
-        }
-    img {
-        height: 40px;
-        width: 85px;
-        margin: 25px 0px 25px 0px;
-        }
+    }
     nav {
         width: 100%;
         background-color: white;
@@ -440,7 +438,7 @@ h2{
         list-style-type: none;
     }
     nav a{
-        display: block; /*Toute la surface sera cliquable*/
+        display: block;
         text-decoration: none;
         font-size: 16px;
         color: black;
@@ -449,8 +447,8 @@ h2{
     }
     nav li{
         float: left;
-        width: 50%;/*100% divisé par le nombre d'éléments de menu*/
-        text-align: center;/*Centre le texte dans les éléments de menu*/
+        width: 50%;
+        text-align: center;
         margin: 0px 0px 10px 0px;
         border-bottom: 3px solid rgb(242, 242, 242);
     }
@@ -465,9 +463,38 @@ h2{
     main{
         margin-top: 10px;
     }
+    .firstparag{
+        margin: 0% 10% 0% 0%;
+    }
     h3{
         margin-right: 70px;
         margin-bottom: 10px;
         font-size: 20px;
-        }
+    }
+    .btn p, div.btn{
+        display: none;
+    }
+.loupe{
+    height: 100%;
+	background-color: rgba(0, 101, 242);
+	z-index: 1;
+	cursor: pointer;
+	color: white;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+    border-radius:  15px;
 }
+.search_wrap .btn {
+    height: 100%;
+    background: rgba(0, 101, 242);
+    z-index: 1;
+    cursor: pointer;
+    color: #fff;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0px 15px 15px 0px;
+}
+}
+
